@@ -1,3 +1,14 @@
+2014-09-16  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Always use matched specpdl entry to record call arguments (Bug#18473).
+	* lisp.h (record_in_backtrace): Adjust prototype.
+	* eval.c (record_in_backtrace): Return current specpdl level.
+	(set_backtrace_args, set_backtrace_nargs): Merge.  Adjust all users.
+	(eval_sub, Ffuncall): Record call arguments in matched specpdl
+	entry and use that entry in call to backtrace_debug_on_exit.
+	(apply_lambda): Likewise.  Get current specpdl level as 3rd arg.
+	(do_debug_on_call): Get current specpdl level as 2nd arg.
+
 2014-09-15  Eli Zaretskii  <eliz@gnu.org>
 
 	Fix display of R2L lines in partial-width windows.
